--- a/client/index.html
+++ b/client/index.html
@@ -10,7 +10,7 @@
       integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB"
       crossorigin="anonymous"
     />
-    <title>NagarikSeva</title>
+    <title>MahaNagar</title>
   </head>
   <body>
     <div id="root"></div>
